// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`format GO term should match snapshot when depth is > 1 1`] = `
<div
  className="table__cell-overflow"
>
  <div
    className="table__cell-clipped"
    style={
      Object {
        "marginLeft": 21,
      }
    }
  >
    term
  </div>
  <div
    className="table__cell-raw"
    style={
      Object {
        "marginLeft": 21,
      }
    }
  >
    term
  </div>
</div>
`;

exports[`format GO term should match snapshot when depth is 1 1`] = `
<div
  className="table__cell-overflow"
>
  <div
    className="table__cell-clipped"
  >
    • 
    term
  </div>
  <div
    className="table__cell-raw"
  >
    • 
    term
  </div>
</div>
`;
